--- a/webroot/css/back/builder.css
+++ b/webroot/css/back/builder.css
@@ -139,6 +139,9 @@ header.header_builder_left span.icon-action:hover, header.header_builder_left bu
 header.header_builder_left span.icon-action.active, header.header_builder_left button.active {
   color: #1565C0;
 }
+header.header_builder_left span.icon-action[disabled="disabled"], header.header_builder_left button[disabled="disabled"] {
+  color: #E0E0E0;
+}
 header.header_builder_left div.minicolors {
   width: 17px;
   height: 17px;
@@ -1064,56 +1067,6 @@ div#popupCroppie div.popup_container {
   border-radius: 3px;
   text-align: center;
   max-width: none;
-}
-div#popupCroppie div.popup_container span#closeCroppie {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  display: block;
-  width: 22px;
-  height: 22px;
-  background-color: transparent;
-  cursor: pointer;
-}
-div#popupCroppie div.popup_container span#closeCroppie::after, div#popupCroppie div.popup_container span#closeCroppie::before {
-  content: '';
-  position: absolute;
-  height: 2px;
-  top: 50%;
-  left: 0;
-  right: 0;
-  margin-top: -2px;
-  width: 100%;
-  background-color: #444;
-  -moz-transition: -moz-transform 0.3s ease 0s;
-  -o-transition: -o-transform 0.3s ease 0s;
-  -webkit-transition: -webkit-transform 0.3s ease;
-  -webkit-transition-delay: 0s;
-  transition: transform 0.3s ease 0s;
-}
-div#popupCroppie div.popup_container span#closeCroppie::after {
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-div#popupCroppie div.popup_container span#closeCroppie::before {
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-div#popupCroppie div.popup_container span#closeCroppie:hover::after {
-  -moz-transform: rotate(20deg);
-  -ms-transform: rotate(20deg);
-  -webkit-transform: rotate(20deg);
-  transform: rotate(20deg);
-}
-div#popupCroppie div.popup_container span#closeCroppie:hover::before {
-  -moz-transform: rotate(-20deg);
-  -ms-transform: rotate(-20deg);
-  -webkit-transform: rotate(-20deg);
-  transform: rotate(-20deg);
 }
 div#popupCroppie div.popup_container > div.croppie-container {
   width: 100%;
