--- a/webroot/scss/back/app.scss
+++ b/webroot/scss/back/app.scss
@@ -1600,3 +1600,32 @@ div.container_orders {
         }
     }
 }
+
+/*----------  Template Admin  ----------*/
+
+div.container_template_admin { overflow: scroll!important;
+    select#selectDisplayUser { padding-right: 50px; }
+    div.list_template {
+        & > ul { width: 100%;
+            & > li { 
+                height: 170px; 
+                padding: 15px 0;
+                background-attachment: scroll!important;
+                background-size: 100% auto!important;
+                background-position: top!important;
+                background-repeat: no-repeat!important;
+                margin-right: 30px; 
+                width: 120px;
+                border: $primaryBorder;
+            }
+        }
+    }
+}
+
+select.animation_blink {
+    @include animation(mc_blink 1s linear infinite 0s);
+    @include keyframes(mc_blink) {
+        0%, 100% { @include opacity(1); }
+        50% { @include opacity(0.5); }
+    }
+}
