--- a/webroot/css/back/app.css
+++ b/webroot/css/back/app.css
@@ -883,6 +883,46 @@ div.container div.block > div.pannel.pannel_legend p {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+.popup_mc.alert {
+  position: fixed;
+  max-width: 400px;
+  height: auto;
+  top: 0;
+  left: 50%;
+  bottom: auto;
+  right: auto;
+  -webkit-transform: translate(-50%, -100px);
+  transform: translate(-50%, -100px);
+  z-index: 9999;
+  visibility: hidden;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -moz-transition: none 0.3s ease 0s;
+  -o-transition: none 0.3s ease 0s;
+  -webkit-transition: none 0.3s ease;
+  -webkit-transition-delay: 0s;
+  -webkit-transition: none 0.3s ease 0s;
+  transition: none 0.3s ease 0s;
+  -webkit-transition-property: opacity, visibility, -webkit-transform;
+  transition-property: opacity, visibility, -webkit-transform;
+  transition-property: opacity, visibility, transform;
+  transition-property: opacity, visibility, transform, -webkit-transform;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 3px;
+  background-color: #fff;
+  padding: 25px;
+}
+.popup_mc.alert.active {
+  visibility: visible;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+  -webkit-transform: translate(-50%, 65px);
+  transform: translate(-50%, 65px);
+}
+.popup_mc.alert p {
+  font-family: "Calibri", "Trebuchet MS", "Helvetica", sans-serif;
+}
 
 div.popup_mc > div.popup_container > header, div.popup_mc > div.popup_container > form {
   width: 100%;
@@ -1008,26 +1048,6 @@ div.popup_mc > div.popup_container > form#formConfirmationAddOrder > div.field {
 }
 div.popup_mc > div.popup_container > form#formConfirmationAddOrder > div.field p {
   text-align: center;
-}
-
-/*----------  Alerte  ----------*/
-div.alert {
-  position: fixed;
-  min-width: 150px;
-  height: 50px;
-  color: #fff;
-  z-index: 9999999;
-  border: 2px solid #fff;
-  right: 50px;
-  bottom: -50px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border-radius: 3px;
-}
-div.alert p {
-  text-align: center;
-  line-height: 50px;
-  padding: 0 20px;
 }
 
 /*----------  Loader  ----------*/
